<resources>
    <string name="app_name">Productivity Insight</string>
    <string name="sign_up_text">Please Sign Up:</string>
    <string name="signup_btn_txt">Sign Up</string>
    <string name="email_label_txt">Enter email:</string>
    <string name="password_label_txt">Enter password:</string>
    <string name="email_field_hint">email</string>
    <string name="password_field_hint">password</string>
    <string name="monthly_button_txt">Monthly Productivity</string>
    <string name="daily_button_txt">Daily Productivity</string>
    <string name="poll_txt">How productive was your day?</string>
    <string name="radio_avg_txt">Average</string>
    <string name="radio_nv_txt">Not very productive</string>
    <string name="radio_naa_txt">Not at all productive</string>
    <string name="radio_p_txt">Pretty productive</string>
    <string name="submit_results_button_txt">Submit Results</string>
    <string name="radio_v_txt">Very productive</string>
    <string name="months_order_expl_txt">(green - good, red - bad, yellow - average)</string>
    <string name="months_title_txt">Your productivity for all months</string>
    <string name="days_title_txt">Your productivity for all days of the week</string>
    <string name="sign_up_button_txt">Sign Up</string>
    <string name="login_link_text">I already have an account, just let me log in.</string>
    <string name="log_in_button_txt">Log In</string>
    <string name="signup_link_txt">I dont\'t have an account. Let me sign up.</string>
    <string name="please_log_in_txt">Please Log In:</string>
    <string name="app_background_image_descr">App\'s background image</string>
</resources>
